--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "^1.9.2",
     "mongodb": "^2.0.31",
     "mongoose": "^4.0.3",
+    "nightwatch": "^0.6.13",
     "stylus": "^0.51.1"
   }
 }
